--- a/jail.conf
+++ b/jail.conf
@@ -788,3 +788,5 @@ filter = wordpress-hard wordpress-soft
 logpath = /var/log/auth.log
 maxretry = 3
 port = http,https
+bantime  = 999999999
+findtime  = 999999999
